[tool.poetry]
name = "schedules"
version = "0.1.0"
description = "Opening hours - Service to store opening hours."
authors = ["Adrian Carayol Orenes <adriancarayol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.65.2"
loguru = "0.5.3"
mypy = "0.910"
gunicorn = "20.1.0"
uvicorn = "0.14.0"
pytest-cov = "2.12.1"
httpx = "0.18.2"

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
black = "21.6b0"
isort = "5.9.1"
pytest = "6.2.4"
asgi-lifespan = "1.0.1"
pytest-asyncio = "0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
